@@ -343,7 +343,7 @@ class CartDebug : public DebuggerSystem
     uInt16 myLabelLength{8};  // longest pre-defined label
 
     // Filenames to use for various I/O (currently these are hardcoded)
-    string myListFile, mySymbolFile, myCfgFile, myDisasmFile, myRomFile;
+    string myListFile, mySymbolFile, myCfgFile, myDisasmFile;
 
     /// Table of instruction mnemonics
     static std::array<const char*, 16>  ourTIAMnemonicR; // read mode
